# kde-baseapps

./: .kateproject  CMakeLists.txt  CPackConfig.cmake  CTestConfig.cmake  ConfigureChecks.cmake  appveyor.yml  config-apps.h.cmake  doxygen.conf
dolphin/plugins/bazaar/: CMakeLists.txt  fileviewbazaarplugin.cpp
dolphin/plugins/dropbox/: CMakeLists.txt  fileviewdropboxplugin.cpp  fileviewdropboxplugin.h
kate/: CMakeLists.txt
kate/addons/kate/: CMakeLists.txt
kate/examples/syntax/: highlight1.spec
kate/kate/: CMakeLists.txt
kate/part/: CMakeLists.txt  katepartprivate_export.h
kate/part/buffer/: katetextbuffer.cpp  katetextbuffer.h  katetextfolding.h  katetextloader.h
kate/part/completion/: codecompletionmodelcontrollerinterfacev4.h  kateargumenthinttree.cpp  katecompletionconfig.cpp  katecompletionmodel.cpp  katecompletionmodel.h  katecompletionwidget.cpp  katecompletionwidget.h  katekeywordcompletion.cpp  katewordcompletion.cpp
kate/part/dialogs/: katedialogs.cpp  katedialogs.h
kate/part/document/: katebuffer.cpp  katedocument.cpp  katedocument.h
kate/part/render/: katelayoutcache.cpp  katelinelayout.h  katerenderer.h  katetextlayout.h
kate/part/schema/: katecategorydrawer.h  kateschemaconfig.cpp  katestyletreewidget.cpp
kate/part/script/: katescript.cpp  katescript.h  katescriptdocument.cpp  katescriptdocument.h  katescripthelpers.cpp  katescripthelpers.h  katescriptmanager.cpp  katescriptmanager.h  katescriptview.h
kate/part/search/: katesearchbar.cpp  katesearchbar.h
kate/part/snippet/: editrepository.cpp  editsnippet.cpp  editsnippet.h  katesnippetglobal.cpp  snippet.h  snippetcompletionitem.cpp  snippetcompletionitem.h  snippetcompletionmodel.cpp  snippetfilterproxymodel.cpp  snippetrepository.cpp  snippetrepository.h  snippetstore.cpp  snippetstore.h  snippetview.cpp  snippetview.h
kate/part/spellcheck/: ontheflycheck.cpp  spellcheck.cpp
kate/part/swapfile/: kateswapdiffcreator.h
kate/part/syntax/: filetypeconfigwidget.ui  katehighlight.cpp  katehighlight.h  katehighlightmenu.cpp  katesyntaxmanager.h
kate/part/utils/: kateautoindent.cpp  katebookmarks.cpp  katecmd.h  katecmds.cpp  katecmds.h  kateconfig.cpp  kateconfig.h  kateglobal.cpp  kateglobal.h  kateprinter.h  katetemplatehandler.cpp
kate/part/view/: katefadeeffect.cpp  katemessagewidget.h  (+9 more)
kate/src/: CMakeLists.txt
kate/tests/: CMakeLists.txt  codecompletiontestmodel.cpp  commands_test.cpp  indenttest.cpp  katedocument_test.cpp  katetextbuffertest.cpp  script_test_base.cpp  scriptdocument_test.cpp  scripting_test.cpp  syntax_highlighting_test.cpp  testutils.cpp  wordcompletiontest.cpp
kfind/: CMakeLists.txt  kdatecombo.cpp  kfinddlg.h  kfindtreeview.cpp  kftabdlg.cpp  kquery.cpp
kmediaplayer/: CMakeLists.txt  kmediaplayer.desktop  kmediaplayerpart.cpp  kmediaplayerpart.desktop  kmediaplayerpart.h  kmediaplayerui.rc  kmediawindow.cpp  kmediawindow.h  main.cpp
kmediaplayer/kcm/: CMakeLists.txt  kcmplayer.cpp  kcmplayer.h  kcmplayer.ui
konq-plugins/: CMakeLists.txt  README
konq-plugins/akregator/: CMakeLists.txt  akregatorplugin.cpp  akregatorplugin.h  konqfeedicon.cpp  pluginbase.cpp
konq-plugins/autorefresh/: CMakeLists.txt  autorefresh.cpp  autorefresh.h
konq-plugins/babelfish/: CMakeLists.txt  plugin_babelfish.cpp  plugin_babelfish.h
konq-plugins/dirfilter/: CMakeLists.txt  dirfilterplugin.cpp
konq-plugins/fsview/: CMakeLists.txt  fsview.cpp  fsview_part.cpp  inode.cpp  treemap.cpp  treemap.h
konq-plugins/imagerotation/: CMakeLists.txt
konq-plugins/kimgalleryplugin/: CMakeLists.txt  imgallerydialog.cpp  imgalleryplugin.cpp  imgalleryplugin.h
konq-plugins/kttsplugin/: CMakeLists.txt  khtmlkttsd.cpp
konq-plugins/quickprint/: CMakeLists.txt
konq-plugins/rellinks/: plugin_rellinks.cpp
konq-plugins/searchbar/: CMakeLists.txt  OpenSearchManager.cpp  SuggestionEngine.cpp  WebShortcutWidget.cpp  searchbar.cpp  searchbar.h
konq-plugins/shellcmdplugin/: CMakeLists.txt  kshellcmddialog.cpp  kshellcmdexecutor.cpp  kshellcmdplugin.cpp  kshellcmdplugin.h
konq-plugins/uachanger/: CMakeLists.txt  uachangerplugin.cpp  uachangerplugin.h
konqueror/client/: CMakeLists.txt  kfmclient.cpp  kfmclient.h
konsole/: CMakeLists.txt
konsole/desktop/: CMakeLists.txt  konsolepart.desktop
konsole/src/: Application.cpp  CMakeLists.txt  ColorScheme.h  ColorSchemeEditor.cpp  ColorSchemeEditor.h  EditProfileDialog.cpp  EditProfileDialog.h  Emulation.cpp  Emulation.h  HistorySizeDialog.cpp  HistorySizeWidget.cpp  IncrementalSearchBar.cpp  KeyBindingEditor.cpp  KeyboardTranslator.h  MainWindow.cpp  ManageProfilesDialog.cpp  ManageProfilesDialog.h  Part.cpp  Part.h  ProcessInfo.cpp  ProfileManager.cpp  Pty.cpp  Pty.h  Session.cpp  Session.h  SessionController.cpp  SessionController.h  TerminalDisplay.cpp  TerminalDisplay.h  TerminalDisplayAccessible.cpp  ViewContainer.cpp  ViewContainer.h  ViewContainerTabBar.cpp  ViewManager.cpp  Vt102Emulation.cpp
lib/konq/: CMakeLists.txt  SERVICEMENUS  konq_copytomenu.h  konq_dndpopupmenuplugin.h  konq_events.h  konq_historyentry.h  konq_historyloader.h  konq_historyprovider.cpp  konq_historyprovider.h  konq_operations.cpp  konq_operations.h  konq_popupmenu.cpp  konq_popupmenu.h  konq_popupmenuplugin.h  konq_sound.cc  konq_statusbarmessagelabel.cpp  konq_statusbarmessagelabel.h  konqmimedata.h  kversioncontrolplugin.h  kversioncontrolplugin2.cpp  kversioncontrolplugin2.h  libkonq_export.h
nsplugins/test/: CMakeLists.txt  testnsplugin.cpp  testnsplugin.h
nsplugins/wrapper/: CMakeLists.txt
rekonq/: CMakeLists.txt
rekonq/icons/: CMakeLists.txt
rekonq/src/: CMakeLists.txt  application.cpp  autosaver.h  cleardata.ui  iconmanager.cpp  iconmanager.h  rekonq.kcfg  rekonq_defines.h  websnap.h
settings/kio/: CMakeLists.txt  cache.cpp  cache.desktop  cookies.desktop  kcookiesmain.cpp  kcookiesmain.h  kcookiesmanagement.cpp  kcookiespolicies.h  kcookiespolicyselectiondlg.h  kproxydlg.cpp  ksaveioconfig.cpp  ksaveioconfig.h  main.cpp  netpref.h  smbrodlg.cpp  smbrodlg.h  useragent.desktop  useragentdlg.cpp  useragentdlg.h  useragentinfo.h
(+559 files in other folders)
